--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -15,4 +15,4 @@ jobs:
         with:
           token: ${{ secrets.DIGITAL_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl apply -f infra/k8s
+      - run: kubectl apply -f infra/k8s -f infra/k8s-prod
